--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="mt-3">
                   <img
                     class="img-fluid"
-                    src="images/bride.jpg"
+                    src="images/ bride.jpeg"
                     alt="Bride"
                     data-aos="flip-right"
                     data-aos-duration="1000"
