--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               data-aos="zoom-in-down"
               data-aos-duration="1000"
             >
-              Groom & Bride
+               Bride & Groom
             </h2>
             <div class="row text-center">
               
